--- a/css/main.css
+++ b/css/main.css
@@ -328,3 +328,29 @@ div.thankspage {
   font-family: libre-bsakerville;
   padding-top: 2em;
 }
+
+#mapparkval {
+  padding-top: 10px;
+  border: 10px;
+} 
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+select {
+  text-align: center;
+  appearance: none;
+  background-color: white;
+  border: none;
+  padding: 0 1em 0 0;
+  margin: 0;
+  width: 100%;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: inherit;
+  line-height: inherit;
+  border: 2px solid black;
+}
